--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
   </head>
   <body>
@@ -30,7 +28,7 @@
       <form class="form-horizontal" action="/action_page.php">
         <div class="form-group">
           <label class="control-label col-sm-2" for="email"
-            ><i class="bi bi-envelop"></i>Email:</label
+            ><i class="bi bi-envelope"></i> Email:</label
           >
           <div class="col-sm-10">
             <input
@@ -42,13 +40,28 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label col-sm-2" for="pwd">Password:</label>
+          <label class="control-label col-sm-2" for="lastName"
+            ><i class="bi bi-person-fill"></i> Last Name:</label
+          >
           <div class="col-sm-10">
             <input
-              type="password"
+              type="lastName"
               class="form-control"
-              id="pwd"
-              placeholder="Enter password"
+              id="lastName"
+              placeholder="Last Name"
+            />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2" for="firstName"
+            ><i class="bi bi-person"></i> First Name:</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="firstName"
+              class="form-control"
+              id="firstName"
+              placeholder="First Name"
             />
           </div>
         </div>
@@ -61,14 +74,10 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </div>
       </form>
-
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      </p>
     </div>
   </body>
 </html>
